--- a/index.html
+++ b/index.html
@@ -19,28 +19,31 @@
 
         <div class="calculator">
             <div class= "screen">
-                some stuff
+                <div class="text">
+                    
+                </div>
+                
             </div>
             <div class="buttons">
-                <button> AC</button>
+                <button class="ac"> AC</button>
                 <button> +/- </button>
                 <button> % </button>
                 <button class = "right-operator"> ÷</button>
-                <button class = "inner-b"> 7</button>
-                <button class = "inner-b"> 8</button>
-                <button class = "inner-b"> 9</button>
-                <button class = "right-operator"> ×</button>
-                <button class = "inner-b"> 4</button>
-                <button class = "inner-b"> 5</button>
-                <button class = "inner-b"> 6</button>
-                <button class="right-operator"> -</button>
-                <button class = "inner-b"> 1</button>
-                <button class = "inner-b"> 2</button>
-                <button class = "inner-b"> 3</button>
-                <button class="right-operator"> +</button>
-                <button class = "inner-b" id ="zero">0 </button>
-                <button class = "inner-b"> .</button>
-                <button class="right-operator"> =</button>
+                <button class = "inner-b num">7</button>
+                <button class = "inner-b num">8</button>
+                <button class = "inner-b num">9</button>
+                <button class = "right-operator">×</button>
+                <button class = "inner-b num">4</button>
+                <button class = "inner-b num">5</button>
+                <button class = "inner-b num">6</button>
+                <button class="right-operator">-</button>
+                <button class = "inner-b num">1</button>
+                <button class = "inner-b num">2</button>
+                <button class = "inner-b num">3</button>
+                <button class="right-operator">+</button>
+                <button class = "inner-b num" id ="zero">0</button>
+                <button class = "inner-b num">.</button>
+                <button class="right-operator">=</button>
             </div>
 
 
