--- a/index.html
+++ b/index.html
@@ -20,39 +20,33 @@
         <div class="calculator">
             <div class= "screen">
                 <div class="text">
-                    
+                    0
                 </div>
                 
             </div>
             <div class="buttons">
-                <button class="ac"> AC</button>
-                <button> +/- </button>
-                <button> % </button>
-                <button class = "right-operator"> ÷</button>
-                <button class = "inner-b num">7</button>
-                <button class = "inner-b num">8</button>
-                <button class = "inner-b num">9</button>
-                <button class = "right-operator">×</button>
-                <button class = "inner-b num">4</button>
-                <button class = "inner-b num">5</button>
-                <button class = "inner-b num">6</button>
-                <button class="right-operator">-</button>
-                <button class = "inner-b num">1</button>
-                <button class = "inner-b num">2</button>
-                <button class = "inner-b num">3</button>
-                <button class="right-operator">+</button>
-                <button class = "inner-b num" id ="zero">0</button>
-                <button class = "inner-b num">.</button>
-                <button class="right-operator">=</button>
+                <button value = "clear" class= "clear"> AC</button>
+                <button value = "sign" class= "sign"> +/- </button>
+                <button value = "percent" class ="percent"> % </button>
+                <button value = "÷" class = "operator">÷</button>
+                <button value = "7" class = "operand">7</button>
+                <button value = "8" class = "operand">8</button>
+                <button value = "9" class = "operand">9</button>
+                <button value = "×" class = "operator">×</button>
+                <button value = "4" class = "operand">4</button>
+                <button value = "5" class = "operand">5</button>
+                <button value = "6" class = "operand">6</button>
+                <button value = "-" class=  "operator">-</button>
+                <button value = "1" class = "operand">1</button>
+                <button value = "2" class = "operand">2</button>
+                <button value = "3" class = "operand">3</button>
+                <button value = "+" class = "operator">+</button>
+                <button value = "0" class = "operand" id ="zero">0</button>
+                <button value = "." class = "decimal">.</button>
+                <button value = "=" class = "equals">=</button>
             </div>
-
-
-
         </div>
-
-
     </div>
-
 
     <div class="footer">
         © wlgnstla 2022
